# wimba

./: .gitignore  README.md  pyproject.toml
docs/: ASSEMBLE_AND_RUN.md  BUILD.md  CONFIG.md  DATA_MODEL.md  EXAMPLES.md  FOURIER.md  PRECALCULATED.md  README.md  RESONATOR.md  SETUP.md
examples/: SubLHC_input.yaml  machine.yaml
examples/LHC/: LHC_config.yaml  LHC_input.yaml  README.md
examples/LHC/data/: lhc_collimators_reference_b1.json  lhc_default_pipe.json  lhc_rf_cavities_homs.json
examples/RoundChamber/: README.md  RoundChamber_input.yaml
examples/SubLHC/: README.md  SubLHC.tfs  SubLHC_input.yaml
examples/resonator/: README.md  resonator.tfs  resonator_input.yaml  resonator_machine.py
tests/: test_assembly.py  test_bridges.py  test_builder.py  test_config.py  test_core.py  test_fourier_roundtrip.py  test_gui_runner.py  test_import_map.py  test_logutil.py  test_output.py  test_pipe_json.py  test_pytlwall_bridge.py  test_resonator_vs_xwakes.py  test_results_model.py  test_run.py  test_store.py
tests/data/: fcc_kicker_zlong_1e-10.txt  fcc_kicker_zlong_1micron.txt
wimba/: __init__.py  assembly.py  cli.py  config.py  logutil.py  naming.py  output.py  plotting.py  run.py  store.py
wimba/analysis/: __init__.py  fourier.py
wimba/builders/: __init__.py  loader.py  madx.py
wimba/core/: __init__.py  element.py  impedance_term.py  machine.py  optics.py  provider.py  terms.py
wimba/gui/: app.py  model.py  panels.py  results.py  runner.py  theme.py
wimba/io/: __init__.py  import_map.py  json_io.py  pipe_cfg.py  pytlwall_cfg.py  tables.py
wimba/sources/: __init__.py  iw2d_bridge.py  precalculated_bridge.py  pytlwall_bridge.py  resonator.py  table.py
