[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wimba"
version = "0.0.1"
description = "Wake & Impedance Model Builder for Accelerators"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]
authors = [
           { name = "Tatiana Rijoff" },
           { name = "Carlo Zannini" },]

[tool.setuptools.packages.find]
include = ["wimba*"]
