[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wimba"
version = "0.0.1"
description = "Wake & Impedance Model Builder for Accelerators"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "pyyaml"]
authors = [
    { name = "Tatiana Rijoff" },
    { name = "Carlo Zannini" },
]

[project.optional-dependencies]
dev = ["pytest", "xwakes"]
examples = ["matplotlib"]

[project.scripts]
wimba = "wimba.cli:main"

[tool.setuptools.packages.find]
include = ["wimba*"]
